Finished most of the add entry feature

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ button {
 }
 #addForm {
   background-color: #ee964b;
+  visibility: hidden;
 }
 form > label {
   margin-right: 0.5rem;
@@ -76,6 +77,7 @@ form > label {
 #input-number {
   width: 2em;
 }
+
 /*
 black: #1F271B
 dark blue: #19647E
